fixed grader permissions

--- a/app/views/submissions/_compiler_output.html.erb
+++ b/app/views/submissions/_compiler_output.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-curtain">
+<div id="compiler-output" class="modal-curtain">
   <div class="modal-popup">
     <h1>Compiler Output</h1>
     <div class="compiler-output">
