added some view changes

--- a/app/views/courses/users.html.erb
+++ b/app/views/courses/users.html.erb
@@ -10,6 +10,7 @@
     <thead>
     <tr>
       <th>Name</th>
+      <th>Email</th>
       <th>Roles</th>
       <th>Kick From Course</th>
     </tr>
@@ -18,6 +19,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.name, course_user_edit_path(@course, user) %></td>
+        <td><%= link_to user.email, course_user_edit_path(@course, user) %></td>
         <td><%= user.roles.where(resource_type: "Course", resource_id: @course).map(&:name).join(",") %></td>
         <td><%= link_to 'Kick', course_user_kick_path(@course, user), data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -31,7 +33,7 @@
     $('#users-list').tablesorter({
       sortList: [[1,0],[0,0]],
       headers: {
-        2: { sorter: false }
+        3: { sorter: false }
       }
     });
   });
