--- a/app/views/submissions/edit.html.erb
+++ b/app/views/submissions/edit.html.erb
@@ -6,6 +6,7 @@
 <header>
   <h1><%= @submission.assignment.name %></h1>
   <h2><%= @submission.user.name %></h2>
+  <h2><%= @submission.user.email %></h2>
 </header>
 <div class="content-group">
   <div class="column-wrapper">
