new updates, fixes some outputs, and added in zip file creation

--- a/app/assets/stylesheets/submissions.css.scss
+++ b/app/assets/stylesheets/submissions.css.scss
@@ -149,6 +149,7 @@
       background-color: $color-white;
       border: 1px solid $color-border-light;
       border-top: 0;
+      font-family: courier;
     }
   }
 
