--- a/app/views/assignments/_edit_form.html.erb
+++ b/app/views/assignments/_edit_form.html.erb
@@ -5,15 +5,10 @@
   <%= f.number_field :total_grade, :class => 'text_field', :step => 0.5, :placeholder => 'Points Possible' %><br>
   <%= f.text_area :description, :placeholder => 'Assignment Description' %><br>
   <%= f.label "Assignment Available Date: " %>
+  <span datetimepicker-start-date><%= @assignment.start_date.to_time.to_i %></span>
   <div class="datetime-picker-container"><%= f.text_field :start_date %></div><br>
   <%= f.label "Assignment Due Date: " %>
+  <span datetimepicker-end-date><%= @assignment.due_date.to_time.to_i %></span>
   <div class="datetime-picker-container"><%= f.text_field :due_date %></div><br>
   <%= f.submit "Save" %>
 <% end %>
-
-<script>
-  $(document).on("page:change", function() {
-    $('#assignment_start_date').datetimepicker({format: 'unixtime', inline: true, value: <%= @assignment.start_date.to_time.to_i %>});
-    $('#assignment_due_date').datetimepicker({format: 'unixtime', inline: true, value: <%= @assignment.due_date.to_time.to_i %>});
-  });
-</script>
