added in netid and email

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,6 +1,6 @@
 <div class="topbar">
   <div class="user-info">
-    <p><%= current_user.name %></p>
+    <p><%= current_user.first_name %></p>
 
     <div class="expand">
       <div>.&nbsp;.&nbsp;.</div>
