--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,9 @@
 <%= render "shared/error_messages", :target => @user %>
 
 <%= form_for @user do |f| %>
-  <%= f.text_field :name, :placeholder => 'Your Name' %>
-  <%= f.text_field :email, :placeholder => 'email@example.com' %><br>
-  <%= f.password_field :password, :placeholder => 'password' %>
-  <%= f.password_field :password_confirmation, :placeholder => 'confirmation password' %>
+  <%= f.text_field :netid, :placeholder => 'NetID' %><br>
+  <%= f.text_field :first_name, :placeholder => 'First Name' %>
+  <%= f.text_field :last_name, :placeholder => 'Last Name' %>
+  <%= f.email_field :email, :placeholder => 'email@example.com' %><br>
   <%= f.submit "Register" %>
 <% end %>
