working on polling/jquery

--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -48,7 +48,7 @@
       </li>
       <li>
         <%= link_to run_submission_url(@submission), :remote => true do %>
-          <div>
+          <div id="run_submission">
             <%= image_tag('icon_test.png', id: "run", size: "64x64", alt: "Run Tests", title: "Run Tests") %><br>
             <span id="run-title">Run Tests</span>
           </div>
