--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
   <% @users.each do |user| %>
     <tr>
       <td><%= user.email %></td>
-      <td><%= user.name %></td>
+      <td><%= user.first_name %> <%= user.last_name%></td>
       <td>
       <% user.roles.each do |role| %>
         <%= role.name %>&nbsp;<%= role.resource_type %>&nbsp;<%= role.resource_id %><br>
