--- a/app/views/test_cases/show.html.erb
+++ b/app/views/test_cases/show.html.erb
@@ -39,12 +39,12 @@
         <% end %>
       </li>
       <li>
-        <a href="#" onclick="$('#run-method-modal').show();">
+        <span class="fake-a" onclick="$('#run-method-modal').show();">
           <div>
             <%= image_tag('icon_add.png', size: "64x64", alt: "Add Run Method", title: "Add Run Method") %><br>
             Add Run Method
           </div>
-        </a>
+        </span>
       </li>
     </ul>
   </div>
