--- a/app/views/submissions/_output_comparison.html.erb
+++ b/app/views/submissions/_output_comparison.html.erb
@@ -1,10 +1,10 @@
+
+
 <header>
   <h1>Program Output</h1>
-  <%= content_tag "div", id: "submission", data: { submission: @submission.assignment.test_case.run_methods.each } do %>
-  <% end %>
   <% passed = submission.visible_run_saves(current_user).select { |s| s.pass }.count %>
-  <% total = submission.visible_run_saves(current_user).count %>
-  <h3><%= passed %> Tests Out Of <%= total %> Passed</h3>
+  <%= content_tag "div", id: "submission", data: { submission: submission, runsavecount: @total, totalruncount: trc} do %><% end %>
+  <h3><%= passed %> Tests Out Of <%= @total %> Passed</h3>
 </header>
 <div class="content-group">
   <div class="subgroup" id="run-method-list">
