--- a/app/views/submissions/run.js.erb
+++ b/app/views/submissions/run.js.erb
@@ -1,4 +1,4 @@
-$(".program-output-holder").html("<%= j render :partial => 'output_comparison', :locals => { :submission => @submission } %>");
+$(".program-output-holder").html("<%= j render :partial => 'output_comparison', :locals => { :submission => @submission, :trc => @trc } %>");
 $("#run").attr("src", '/assets/icon_test.png');
 var element = document.getElementById("run-title")
 element.innerHTML = "Run Tests"
