--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -47,18 +47,12 @@
         <% end %>
       </li>
       <li>
-        <%= link_to compile_submission_url(@submission), :remote => true do %>
+        <%= link_to delete_outputs_url(@submission), :remote => true do %>
           <div>
             <%= image_tag('icon_delete.png', size: "64x64", alt: "Delete Output", title: "Delete Output") %><br>
             Delete Output
           </div>
         <% end %>
-      </li>
-      <li>
-          <div id="delete_outputs">
-            <%= image_tag('icon_delete.png', size: "64x64", alt: "Delete Output", title: "Delete Output") %><br>
-            Test Button
-          </div>
       </li>
       <% if @submission.submitted %>
         <li>
@@ -84,7 +78,7 @@
 </div>
 
 <div class="program-output-holder">
-  <%= render :partial => 'output_comparison', :locals => { :submission => @submission } %>
+  <%= render :partial => 'output_comparison', :locals => { :submission => @submission, :trc => @trc } %>
 </div>
 
 <script>
