--- a/app/views/submissions/_output_comparison.html.erb
+++ b/app/views/submissions/_output_comparison.html.erb
@@ -3,8 +3,9 @@
 <header>
   <h1>Program Output</h1>
   <% passed = submission.visible_run_saves(current_user).select { |s| s.pass }.count %>
-  <%= content_tag "div", id: "submission", data: { submission: submission, runsavecount: @total, totalruncount: trc} do %><% end %>
-  <h3><%= passed %> Tests Out Of <%= @total %> Passed</h3>
+  <% total = submission.visible_run_saves(current_user).count %>
+  <%= content_tag "div", id: "submission", data: { submission: submission} do %><% end %>
+  <h3><%= passed %> Tests Out Of <%= total %> Passed</h3>
 </header>
 <div class="content-group">
   <div class="subgroup" id="run-method-list">
