--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -14,7 +14,7 @@
 }
 
 .course-visible {
-  color: $color-green;
+  color: $color-blue;
   font-weight: bold;
 }
 
@@ -27,3 +27,4 @@
   overflow-x: scroll;
   width: 100%;
 }
+
