--- a/app/views/courses/edit_user.html.erb
+++ b/app/views/courses/edit_user.html.erb
@@ -1,6 +1,22 @@
 <% breadcrumb :course, @course %>
 <% content_for :title, "Modify Enrolled User" %>
+<style>
+  button{
+    font-size: 14pt;
+    margin-top: 1px;
+    margin-right: 2px;
+    position:absolute;
+    top:10px;
+    right:30px;
 
+  }
+</style>
+<button onclick="goBack()">Go Back</button>
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
 <header>
   <h1><%= @course.name %></h1>
   <h2>Editing user <%= @user.first_name %> <%= @user.last_name %></h2>
@@ -34,6 +50,7 @@
       </tbody>
     </table>
    
-    <%= f.submit "Save" %>
+    <%= f.submit "Update & Return" %>
   <% end %>
 </div>
+
