--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,10 +5,23 @@
   <h1>Create a new course</h1>
 </header>
 
-<div class="content-group">
+<!--<div class="content-group">
   <%= link_to 'Create a new course', new_course_url %>
+</div>-->
+<div class="content-group">
+    <div class="actions">
+    <ul>
+      <li>
+        <%= link_to new_course_url do %>
+          <div>
+            <%= image_tag('icon_add.png', size: "64x64", alt: "New Course", title: "Create New Course") %><br>
+            New Course
+          </div>
+        <% end %>
+      </li>
+    </ul>
+  </div>
 </div>
-
 <header>
   <h1>All Courses</h1>
 </header>
@@ -16,3 +29,4 @@
 <div class="content-group">
   <%= render :partial => "course_table", :locals => { :courses => @courses } %>
 </div>
+
