--- a/app/views/courses/users.html.erb
+++ b/app/views/courses/users.html.erb
@@ -1,5 +1,17 @@
 <% breadcrumb :course_users, @course %>
 <% content_for :title, "Course Users" %>
+<style>
+  button{
+    font-size: 14pt;
+    margin-top: 1px;
+    margin-right: 2px;
+    position:absolute;
+    top:10px;
+    right:30px;
+
+  }
+</style>
+<button onclick="goBack()">Go Back</button>
 
 <header>
   <h1><%= @course.name %></h1>
@@ -13,7 +25,7 @@
       <th>Last Name</th>
       <th>Email</th>
       <th>Roles</th>
-      <th>Kick From Course</th>
+      <th>Remove From Course</th>
     </tr>
     </thead>
     <tbody>
@@ -23,7 +35,7 @@
         <td><%= link_to user.last_name, course_user_edit_path(@course, user) %></td>
         <td><%= link_to user.email, course_user_edit_path(@course, user) %></td>
         <td><%= user.roles.where(resource_type: "Course", resource_id: @course).map(&:name).join(",") %></td>
-        <td><%= link_to 'Kick', course_user_kick_path(@course, user), data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Remove', course_user_kick_path(@course, user), data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
     </tbody>
@@ -39,4 +51,9 @@
       }
     });
   });
+</script>
+<script>
+function goBack() {
+    window.history.back();
+}
 </script>
