--- a/app/views/inputs/_inputs_form.html.erb
+++ b/app/views/inputs/_inputs_form.html.erb
@@ -3,7 +3,37 @@
   <h1><%= @run_method.name %></h1>
 </header>
 
-<div class="content-group">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd; 
+}
+div.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+}
+</style>
+</head>
+<body>
+
+<button class="accordion">New Input</button>
+<div class="panel">
+  <div class="content-group">
   <%= form_for @input, url: new_input_url(@run_method), method: :post do |f| %>
     <%= f.text_field :name, :placeholder => 'Run Name' %><br>
     <%= f.text_area :description, :placeholder => 'Input Description' %><br>
@@ -12,4 +42,37 @@
     <%= f.check_box :student_visible, { :checked => true } %><br>
     <%= f.submit "Create" %>
   <% end %>
+  </div>
 </div>
+
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function(){
+        this.classList.toggle("active");
+        var panel = this.nextElementSibling;
+        if (panel.style.display === "block") {
+            panel.style.display = "none";
+        } else {
+            panel.style.display = "block";
+        }
+    }
+}
+</script>
+
+</body>
+</html>
+
+<!--<div class="content-group">
+  <%= form_for @input, url: new_input_url(@run_method), method: :post do |f| %>
+    <%= f.text_field :name, :placeholder => 'Run Name' %><br>
+    <%= f.text_area :description, :placeholder => 'Input Description' %><br>
+    <%= f.text_area :data, :placeholder => 'Add Input Text' %><br>
+    <%= f.label :student_visible, "Make Visible for Student Runs " %>
+    <%= f.check_box :student_visible, { :checked => true } %><br>
+    <%= f.submit "Create" %>
+  <% end %>
+</div>-->
