--- a/app/views/run_methods/_run_method_edit_form.html.erb
+++ b/app/views/run_methods/_run_method_edit_form.html.erb
@@ -1,7 +1,49 @@
 <header>
   <h1>Edit Run Method</h1>
 </header>
-<div class="content-group">
+<!--<div class="content-group">
+  <%= form_for run_method, url: run_method_url(run_method), method: :patch, remote: true do |f| %>
+    <%= f.text_field :name, :placeholder => 'Run Name' %><br>
+    <%= f.text_field :run_command, :placeholder => 'Run Command' %><br>
+    <%= f.text_area :description, :placeholder => 'Run Description' %><br>
+    <%= f.submit "Update", :onclick => '$(".modal-curtain").hide();' %>
+  <% end %>
+</div>-->
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd; 
+}
+
+div.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+}
+</style>
+</head>
+<body>
+
+
+<button class="accordion">Run Method</button>
+<div class="panel">
+  <div class="content-group">
   <%= form_for run_method, url: run_method_url(run_method), method: :patch, remote: true do |f| %>
     <%= f.text_field :name, :placeholder => 'Run Name' %><br>
     <%= f.text_field :run_command, :placeholder => 'Run Command' %><br>
@@ -9,6 +51,30 @@
     <%= f.submit "Update", :onclick => '$(".modal-curtain").hide();' %>
   <% end %>
 </div>
+</div>
+
+
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function(){
+        this.classList.toggle("active");
+        var panel = this.nextElementSibling;
+        if (panel.style.display === "block") {
+            panel.style.display = "none";
+        } else {
+            panel.style.display = "block";
+        }
+    }
+}
+</script>
+
+</body>
+</html>
 
 <%= render :file => "inputs/_inputs_edit_form", :locals => { :@run_method => run_method } %>
-<%= render :file => "inputs/_inputs_form", :locals => { :@run_method => run_method, :@input => run_method.inputs.new() } %>
+<%= render :file => "inputs/_inputs_form", :locals => { :test_case => @test_case, :@run_method => run_method, :@input => run_method.inputs.new() } %>
+
