--- a/app/views/test_cases/show.html.erb
+++ b/app/views/test_cases/show.html.erb
@@ -80,6 +80,7 @@
   </div>
 </div>
 
+
 <script>
   <%= render(:file => 'run_methods/refresh.js.erb', :handlers => [:erb], :formats => [:js]) %>
 
@@ -101,3 +102,20 @@
     element.innerHTML = "Running..."
   }
 </script>
+<!--<style>
+  button{
+    font-size: 14pt;
+    margin-top: 1px;
+    margin-right: 2px;
+    position:absolute;
+    top:10px;
+    right:30px;
+
+  }
+</style>
+<button onclick="goBack()">Go Back</button>
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>-->
