--- a/app/views/upload_data/edit_grader.html.erb
+++ b/app/views/upload_data/edit_grader.html.erb
@@ -1,6 +1,22 @@
 <% breadcrumb :upload_datum, @upload_datum %>
 <% content_for :title, @upload_datum.name + " - Edit" %>
+<style>
+  button{
+    font-size: 14pt;
+    margin-top: 1px;
+    margin-right: 2px;
+    position:absolute;
+    top:10px;
+    right:30px;
 
+  }
+</style>
+<button onclick="goBack()">Go Back</button>
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
 <div class="upload-data-wrapper">
   <div class="editor-left-col">
     <%= render :partial => "editor", :locals => { :upload_datum => @upload_datum } %>
@@ -16,3 +32,4 @@
     <%= render :partial => "comment_form", :locals => { :upload_datum => @upload_datum } %>
   </div>
 </div>
+
