--- a/app/views/inputs/_inputs_edit_form.html.erb
+++ b/app/views/inputs/_inputs_edit_form.html.erb
@@ -42,7 +42,7 @@ div.panel {
           <div class="panel">
             <div class="content-group manage-inputs">
               <%= form_for i, url: input_url(i), method: :patch, :remote => true do |f| %>
-                <%= f.text_field :name, :placeholder => 'Run Name' %><br>
+                <%= f.text_field :name, :placeholder => 'Input Name' %><br>
                 <%= f.text_area :description, :placeholder => 'Input Description' %><br>
                 <%= f.text_area :data, :placeholder => 'Add Input Text' %><br><br>
                 <%= f.label :output_data, "Output of the input data." %><br>
@@ -94,7 +94,7 @@ for (i = 0; i < acc.length; i++) {
           <td>
           <div class="content-group manage-inputs">
             <%= form_for i, url: input_url(i), method: :patch, :remote => true do |f| %>
-              <%= f.text_field :name, :placeholder => 'Run Name' %><br>
+              <%= f.text_field :name, :placeholder => 'Input Name' %><br>
               <%= f.text_area :description, :placeholder => 'Input Description' %><br>
               <%= f.text_area :data, :placeholder => 'Add Input Text' %><br><br>
               <%= f.label :output_data, "Output of the input data." %><br>
