--- a/app/views/inputs/_inputs_form.html.erb
+++ b/app/views/inputs/_inputs_form.html.erb
@@ -35,7 +35,7 @@ div.panel {
 <div class="panel">
   <div class="content-group">
   <%= form_for @input, url: new_input_url(@run_method), method: :post do |f| %>
-    <%= f.text_field :name, :placeholder => 'Run Name' %><br>
+    <%= f.text_field :name, :placeholder => 'Input Name' %><br>
     <%= f.text_area :description, :placeholder => 'Input Description' %><br>
     <%= f.text_area :data, :placeholder => 'Add Input Text' %><br>
     <%= f.label :student_visible, "Make Visible for Student Runs " %>
